# mujocoCpp

./: README.md
Robot_example/: CMakeLists.txt
Robot_example/src/: main.cc  mujoco_robot.cpp
Robot_example/src/include/: mujoco_robot.h
Robot_example/src/model/unitree_go1/: go1_modified.xml
Robot_example/src/src/: glfw_adapter.cc  glfw_dispatch.cc  platform_ui_adapter.cc  simulate.cc
